syntax = "proto3";
option go_package = "protoc/model";
package model;

message HealthCheckRequest {
  string wording = 1;
}

message HealthCheckResponse {
  string wording = 1;
}

service Example {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {}
}